complied reset css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8" />
     <title>Guessing Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="assests/css/reset.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assests/css/stlye.css" />
+    <script src="assests/javascript/game.js"></script>
     <!-- Insert BootStrap? -->
+    <!-- Insert Fonts? -->
 </head>
 <body>
     <div class="main">
@@ -16,7 +18,7 @@
         <div class="target">
 
         </div>
-        <div>
+        <div class="statsbox">
             <p>Guesses Remaining: </p>
             <p>Letters Guessed: </p>
             <p>Won Games: </p>
