--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>Guessing Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assests/css/reset.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="assests/css/stlye.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assests/css/style.css" />
     <script src="assests/javascript/game.js"></script>
     <!-- Insert BootStrap? -->
-    <!-- Insert Fonts? -->
+    <link href="https://fonts.googleapis.com/css?family=Pacifico|Roboto" rel="stylesheet">
 </head>
 <body>
     <div class="main">
