--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>Guess The Word</h1>
         </div>
         <div class="target">
-
+            <!-- for styling purposes<p>____</p> -->
         </div>
         <div class="statsbox">
             <p>Guesses Remaining: </p>
