some css, having javascript issues

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assests/css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="assests/css/style.css" />
+    <script
+        src="https://code.jquery.com/jquery-3.3.1.slim.js"
+        integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA="
+        crossorigin="anonymous">
+    </script>
     <script src="assests/javascript/game.js"></script>
     <!-- Insert BootStrap? -->
     <link href="https://fonts.googleapis.com/css?family=Pacifico|Roboto" rel="stylesheet">
@@ -16,13 +21,13 @@
             <h1>Guess The Word</h1>
         </div>
         <div class="target">
-            <!-- for styling purposes<p>____</p> -->
         </div>
         <div class="statsbox">
             <p>Guesses Remaining: </p>
             <p>Letters Guessed: </p>
             <p>Won Games: </p>
             <p>Lost Games: </p>
+            <button>Start New Game</button>
         </div>
     </div>
 </body>
