fixed earlier javascript issues

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="header">
             <h1>Guess The Word</h1>
         </div>
-        <div class="target">
+        <div class="targetme">
         </div>
         <div class="statsbox">
             <p>Guesses Remaining: </p>
