finished js added some last minute css, changed html to reflect new js

--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
         <div class="header">
             <h1>Guess The Word</h1>
         </div>
-        <div class="targetme">
+        <div>
+            <p class="targetme"></p>
         </div>
         <div class="statsbox">
-            <p>Guesses Remaining: </p>
-            <p>Letters Guessed: </p>
-            <p>Won Games: </p>
-            <p>Lost Games: </p>
+            <p>Guesses Remaining: <span id="lives"></span></p>
+            <p>Letters Guessed: <span id="wrongguesses"></span></p>
+            <p>Won Games: <span id="winner"></span></p>
+            <p>Lost Games: <span id="loser"></span></p>
             <button>Start New Game</button>
         </div>
     </div>
